Fix issue where the Blink rendering engine was automaticall y providing scrollbars. This caused problems in the Blink browsers Chromium and Edge Fixed by setting overflow to hidden. Tested in Firefox, Chromium, and Opera.
Files changed in commit:
css/aguapop-rtl/forms.css
css/aguapop/forms.css
css/arc-dark-rtl/forms.css
css/arc-dark/forms.css
css/default-rtl/forms.css
css/default/forms.css
css/fluid-rtl/forms.css
css/fluid/forms.css
css/fresh-rtl/forms.css
css/fresh/forms.css
css/gel-rtl/forms.css
css/gel/forms.css
css/professional-rtl/forms.css
css/professional/forms.css
css/silverwolf-rtl/forms.css
css/silverwolf/forms.css
css/wood-rtl/forms.css
css/wood/forms.css
css/xenos-rtl/forms.css
css/xenos/forms.css

--- a/css/fluid/forms.css
+++ b/css/fluid/forms.css
@@ -261,6 +261,7 @@ border-radius: 0.15em;
 transform: translateY(-0.075em);
 display: grid;
 place-content: center;
+overflow: hidden;
 }
 form fieldset field input[type="checkbox"]::before {
 content: "";
